// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature-styles__Container-sc-4kibyd-0 bIBwTw"
>
  <h2
    class="feature-styles__SubTitle-sc-4kibyd-2 eETBBv"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature-styles__Container-sc-4kibyd-0 bIBwTw"
>
  <h1
    class="feature-styles__Title-sc-4kibyd-1 dwZFMW"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature-styles__Container-sc-4kibyd-0 bIBwTw"
>
  <h1
    class="feature-styles__Title-sc-4kibyd-1 dwZFMW"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature-styles__SubTitle-sc-4kibyd-2 eETBBv"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
